Added registration and authorization

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../static/css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:600" rel="stylesheet">
     <title>Авто</title>
 </head>
@@ -14,19 +14,19 @@
     <div class="header">
         
         <a href="#">
-            <img class="logo" src="../static/images/logo.png">
+            <img class="logo" src="images/logo.png">
         </a>
 
             <form name="search">
-                <input type="text" placeholder="Поиск" class="input_search" name="txt"">
+                <input type="text" placeholder="Поиск" class="input_search" name="txt">
             </form>
 
         <div class="nav_menu">
             <a href="#">
-                <img class="nav_icon" src="../static/images/bookmark-heart.svg">
+                <img class="nav_icon" src="images/bookmark-heart.svg">
             </a>
-            <a href="#">
-                <img class="nav_icon" src="../static/images/person.svg">
+            <a href="/profile">
+                <img class="nav_icon" src="images/person.svg">
             </a>
         </div>
     </div>
@@ -40,13 +40,13 @@
 
                 <a href="#" class="card_car_add">
                     <div class="image_car">
-                        <img src="../static/images/plus.svg">
+                        <img src="images/plus.svg">
                     </div>
                 </a>
 
                 <a href="#" class="card_car">
                     <div class="image_car">
-                        <img src="../static/images/bmw.jpg">
+                        <img src="images/bmw.jpg">
                     </div>
 
                     <div class="title_car">Bmw m5 2022г</div>
