The addition of new cars has been added

--- a/src/main/resources/static/add_car_form.html
+++ b/src/main/resources/static/add_car_form.html
@@ -24,11 +24,11 @@
         <input id="model" type="text" placeholder="Модель" class="input_search" name="model">
         <input id="yearOfRelease" type="text" placeholder="Год выпуска" class="input_search" name="yearOfRelease">
         <input id="color" type="text" placeholder="Цвет" class="input_search" name="color">
-        <input id="wheelDrive" type="text" placeholder="Привод" class="input_search" name="wheelDrive">
+        <select id="type_select"> </select>
+        <select id="type_wheelDrive"> </select>
+        <select id="type_transmission"> </select>
         <input id="mileage" type="text" placeholder="Пробег" class="input_search" name="mileage">
-        <input id="type" type="text" placeholder="Кузов" class="input_search" name="type">
         <input id="price" type="text" placeholder="Цена" class="input_search" name="price">
-        <input id="transmission" type="text" placeholder="Коробка передач" class="input_search" name="transmission">
         <input id="carImages" type="file" placeholder="Выберите фото" class="input_search" name="carImages" multiple>
 
         <button id="registration_button" class="button-49" role="button" onclick="addCar()">Добавить</button>
