--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -38,15 +38,9 @@
 
             <div class="list_card">
 
-                <a href="#" class="card_car_add">
-                    <div class="image_car">
-                        <img src="images/plus.svg">
-                    </div>
-                </a>
-
                 <a href="#" class="card_car">
                     <div class="image_car">
-                        <img src="images/bmw.jpg">
+                        <img src="images/mazda.jpg">
                     </div>
 
                     <div class="title_car">Bmw m5 2022г</div>
