--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -15,7 +15,7 @@
 </head>
 <body class="login_body">
     <div class="login_zone">
-        <a href=""><img class="logo" id="large_logo" src="images/logo.png"></a>
+        <a href="/"><img class="logo" id="large_logo" src="images/logo.png"></a>
         <b id="registration_error" class="incorrect_input"></b>
         <form id="sign_in_form" class="classic_form" name="login_form" method="post" action="/login">
             <input id="username" type="text" placeholder="Логин" class="input_search" name="username">
