It was added: favorities, deleting cars, search cars by title, show cars

--- a/src/main/resources/static/favourite.html
+++ b/src/main/resources/static/favourite.html
@@ -14,12 +14,12 @@
 
     <div class="header">
         
-        <a href="#">
+        <a href="/">
             <img class="logo" src="images/logo.png">
         </a>
 
             <form name="search">
-                <input id="search_my_car" type="text" placeholder="Поиск по заголовку" class="input_search" name="txt">
+                
             </form>
 
         <div class="nav_menu">
@@ -37,7 +37,7 @@
         <div class="recomended_zone">
             <b id="registration_error" class="incorrect_input"></b>
 
-            <div class="header_remoneded_zone">ВСЕ АВТОМОБИЛИ</div>
+            <div class="header_remoneded_zone">В ИЗБРАННОМ</div>
 
             <div class="list_card" id="list_car">
 
@@ -48,5 +48,5 @@
     </div>
 
 </body>
-<script src="js/index.js"></script>
+<script src="js/favourite.js"></script>
 </html>
