--- a/src/main/resources/static/user_profile.html
+++ b/src/main/resources/static/user_profile.html
@@ -19,7 +19,7 @@
         </a>
 
             <form name="search">
-                <input type="text" placeholder="Поиск" class="input_search" name="txt">
+                
             </form>
 
         <div class="nav_menu">
@@ -36,16 +36,12 @@
         <div class="hello_user">Здравствуйте, <b id="user_firstname"></b></div>
 
         <button class="button-49" role="button" onclick="logout()">Выйти</button>
+        <button id="add_car_button" class="button-49" role="button" onclick="addCar()">Добавить авто</button>
 
         <div id="your_car_zone" class="recomended_zone">
             <div class="header_remoneded_zone">ВАШИ АВТОМОБИЛИ</div>
 
             <div class="list_card" id="list_car">
-                <a href="/add_car" class="card_car_add">
-                    <div class="image_car">
-                        <img src="images/plus.svg">
-                    </div>
-                </a>
 
             </div>
 
